// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component fromAgent colors the message white 1`] = `
<div
  className="Message"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "white",
    }
  }
>
  <Linkify
    className="Linkify"
    component="a"
    properties={
      Object {
        "rel": "noopener noreferrer",
        "target": "_blank",
      }
    }
  >
    text--0
  </Linkify>
</div>
`;

exports[`Message component rendering renders with default props 1`] = `
<div
  className="Message fromCustomer"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#333",
    }
  }
>
  <Linkify
    className="Linkify"
    component="a"
    properties={
      Object {
        "rel": "noopener noreferrer",
        "target": "_blank",
      }
    }
  >
    text--0
  </Linkify>
</div>
`;
